--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,43 @@
 #springboot +view use
 #spring.web.resources.static-locations = classpath:/META-INF/resources/,classpath:/resources/,classpath:/static/,classpath:/public/
 
+#by jdbc
+##DataSource  
+#https://www.baeldung.com/spring-jdbc-jdbctemplate
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.url=jdbc:mysql://localhost:3306/mydb?useSSL=false&serverTimezone=Asia/Taipei&useLegacyDatetimeCode=false&createDatabaseIfNotExist=true
+#spring.datasource.username=root
+#spring.datasource.password=root
+
+
+
+#spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
+
+#use h2 
+#https://www.baeldung.com/spring-boot-h2-database
+# 設定專案 port 為 9010
+#server.port: 9010 
+
+
+# h2+ jpa
+#啟動 H2 GUI介面
+spring.h2.console.enabled = true
+# 設定 H2 管理頁面路徑
+spring.h2.console.path = /h2-console
+
+
+# de name = fuc15
+spring.datasource.url=jdbc:h2:mem:fuc15
+spring.datasource.driverClassName=org.h2.Driver
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+# 設定資料庫登入使用者
+spring.datasource.username=sa
+# 設定資料庫登入密碼
+# https://stackoverflow.com/questions/62396327/org-h2-jdbc-jdbcsqlinvalidauthorizationspecexception-wrong-user-name-or-passwor h2登不進去 直接刪掉密碼
+spring.datasource.password=
+
+
+
 #for jsp
 
 spring.mvc.view.prefix=/WEB-INF/jsp/
